# pkg_cv_ros_tutorial_by_dhanuzch

./: CMakeLists.txt  README.md  package.xml
launch/: 1_world.launch.py  1_world_and_script.launch.py  2_world.launch.py  2_world_and_script.launch.py
models/camera1/: model.config  model.sdf
models/pine_tree/: model.config
models/qr_competition/: model.sdf
models/qr_wall/: model.config  model.sdf
models/turtlebot/: model.config
scripts/: camera_read.py  decode_qr.py
worlds/: 1_world.world  1_world_clean.world  2_world.world  2_world_clean.world
