<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pkg_cv_ros_tutorial_by_dhanuzch</name>
  <version>0.0.0</version>
  <description>The pkg_cv_ros_tutorial_by_dhanuzch package migrated to ROS 2</description>

  <maintainer email="mr.dhanush29@gmail.com">dhanuzch</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
